fix layout shift

--- a/src/site.css
+++ b/src/site.css
@@ -153,6 +153,7 @@ img {
   display: block;
   max-width: 100%;
   object-fit: contain;
+  height: auto;
 }
 
 /*
